Agregando dos funcionalidades mas
